--- a/ethers-etherscan/Cargo.toml
+++ b/ethers-etherscan/Cargo.toml
@@ -30,7 +30,7 @@ ethers-core.workspace = true
 
 ethers-solc = { workspace = true, optional = true }
 
-reqwest = { workspace = true, features = ["json"] }
+reqwest-impersonate = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
@@ -47,10 +47,6 @@ serial_test = "3.0.0"
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
 [features]
-default = ["rustls"]
-rustls = ["reqwest/rustls-tls"]
-openssl = ["reqwest/native-tls"]
-
 ethers-solc = ["dep:ethers-solc"]
 solc-full = ["ethers-solc?/full"]
 solc-tests = ["ethers-solc?/tests"]
