--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,7 +90,7 @@ futures-channel = "0.3.28"
 futures-locks = { version = "0.7.1", default-features = false }
 futures-timer = { version = "3.0.2", default-features = false, features = ["wasm-bindgen"] }
 pin-project = "1.1"
-reqwest = { version = "0.11.19", default-features = false }
+reqwest-impersonate = {version = "0.11.65"}
 url = { version = "2.4", default-features = false }
 
 # crypto
