--- a/examples/middleware/Cargo.toml
+++ b/examples/middleware/Cargo.toml
@@ -9,7 +9,7 @@ rust-version.workspace = true
 edition.workspace = true
 
 [dev-dependencies]
-ethers = { workspace = true, features = ["rustls", "etherscan"] }
+ethers = { workspace = true, features = [ "etherscan"] }
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
