--- a/examples/transactions/Cargo.toml
+++ b/examples/transactions/Cargo.toml
@@ -9,7 +9,7 @@ rust-version.workspace = true
 edition.workspace = true
 
 [dev-dependencies]
-ethers = { workspace = true, features = ["abigen", "ws", "rustls", "ethers-solc"] }
+ethers = { workspace = true, features = ["abigen", "ws",  "ethers-solc"] }
 
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
