--- a/ethers-contract/ethers-contract-abigen/Cargo.toml
+++ b/ethers-contract/ethers-contract-abigen/Cargo.toml
@@ -45,7 +45,7 @@ toml.workspace = true
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # online
 ethers-etherscan = { workspace = true, optional = true }
-reqwest-impersonate = { workspace = true, features = ["blocking"], optional = true }
+chromimic = { workspace = true, features = ["blocking"], optional = true }
 tokio = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
 
@@ -54,7 +54,7 @@ default = ["providers"]
 
 providers = []
 
-online = ["reqwest-impersonate", "ethers-etherscan", "url", "tokio"]
+online = ["chromimic", "ethers-etherscan", "url", "tokio"]
 
 [dev-dependencies]
 tempfile.workspace = true
